Fixing new logo on mobile

--- a/assets/_sass/_header.scss
+++ b/assets/_sass/_header.scss
@@ -164,8 +164,8 @@ header {
 			.logo {
 				width: 90%;
 				height: 5em;
-				background-size: 95% auto;
-				background-position: left center;				
+				background-size: auto 150%;
+				background-position: center 30%;				
 			}
 		}
 		nav {
